src/objects/Expense_Line_Item__c.object
<CustomObject>
    <fields>
        <fullName>Contractor_Name__c</fullName>
        <label>Contractor Name</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Expense_Report__c</fullName>
        <label>Expense Report</label>
        <referenceTo>Expense_Report__c</referenceTo>
        <relationshipLabel>Expense Line Items</relationshipLabel>
        <relationshipName>Expense_Line_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Expense_Type__c</fullName>
        <label>Expense Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Transport</fullName>
                </value>
                <value>
                    <fullName>Individual Meals</fullName>
                </value>
                <value>
                    <fullName>Entertainment</fullName>
                </value>
                <value>
                    <fullName>Mileage Reimbursement</fullName>
                </value>
                <value>
                    <fullName>Labor</fullName>
                </value>
                <value>
                    <fullName>Service</fullName>
                </value>
                <value>
                    <fullName>Tax</fullName>
                </value>
                <value>
                    <fullName>Material</fullName>
                </value>
                <value>
                    <fullName>Airfare</fullName>
                </value>
                <value>
                    <fullName>Car Rental</fullName>
                </value>
                <value>
                    <fullName>Parking</fullName>
                </value>
                <value>
                    <fullName>Meals</fullName>
                </value>
                <value>
                    <fullName>Misc</fullName>
                </value>
                <value>
                    <fullName>Hotel</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ExternalId__c</fullName>
        <label>ExternalId</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Friday_s_Expense__c</fullName>
        <label>Friday&apos;s Expense</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Monday_s_Expense__c</fullName>
        <label>Monday&apos;s Expense</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Project_Team_Member__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Team Member</label>
        <referenceTo>Project_Member__c</referenceTo>
        <relationshipLabel>Expense Line Items</relationshipLabel>
        <relationshipName>Expense_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Expense Line Items</relationshipLabel>
        <relationshipName>Expense_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Saturday_s_Expense__c</fullName>
        <label>Saturday&apos;s Expense</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Start_Of_the_Week__c</fullName>
        <formula>Expense_Report__r.Start_of_Week__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Start Of the Week</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Start_of_Week__c</fullName>
        <description>Start of the week</description>
        <label>Start of Week</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Sunday_s_Expense__c</fullName>
        <label>Sunday&apos;s Expense</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tasks__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Tasks</label>
        <referenceTo>Project_Task__c</referenceTo>
        <relationshipLabel>Expense Line Items</relationshipLabel>
        <relationshipName>Expense_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Thursday_s_Expense__c</fullName>
        <label>Thursday&apos;s Expense</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tuesday_s_Expense__c</fullName>
        <label>Tuesday&apos;s Expense</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Wednesday_s_Expense__c</fullName>
        <label>Wednesday&apos;s Expense</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Expense Line Item</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Expense_Report__c</columns>
        <columns>Start_of_Week__c</columns>
        <columns>Tasks__c</columns>
        <columns>Project__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>EL-{000000}</displayFormat>
        <label>ExpenseLineItem Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Expense Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>